Closed Bug 180043 Opened 23 years ago Closed 23 years ago

nsDocument::ChildAt needs to check the index to avoid asserts

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

Attached patch like thisSplinter Review
Attachment #106175 - Flags: superreview?(alecf)
Attachment #106175 - Flags: review?(jkeiser)
Attachment #106175 - Flags: review?(jkeiser) → review+
Comment on attachment 106175 [details] [diff] [review] like this sr=alecf
Attachment #106175 - Flags: superreview?(alecf) → superreview+
fixed
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: