Need to sanity-check the index to avoid out-of-bounds array access. Bug 180043, r=jkeiser, sr=alecf